vault/vault-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
spec:
  type: ClusterIP  
  selector: 
    component: vault
  ports:
    - port: 8200
      protocol: TCP
      targetPort: 8200
